# WSLNotify

./: .bash_aliases  .bashrc  .dircolors  .gitignore  .gvimrc  .vimrc  COPYING  README.md  WSLGetActiveWindow.cs  WSLNotify.cs  bash_aliases  bashrc  matplotlibrc  settings.json
WSLNotify/: .gitignore  WSLGetActiveWindow.cs  WSLNotify.cs
_/custom-prompt/: Cargo.toml  build.sh
_/custom-prompt/src/: main.rs
bash_prompt/: .clang-format  .gitignore  Makefile  bash_prompt.c  clang-format.bash
config/: .bash_aliases  .dircolors  .gitconfig  .gvimrc  .zsh_aliases  matplotlibrc  tfpf.css
custom-bash-prompt/: .gitignore  Makefile  clang-format.bash  custom-bash-prompt.c
custom-prompt/: .gitignore  Cargo.toml  Makefile  build.sh  clang-format.bash  custom-prompt.c  get_active_window_id_linux.c  get_active_window_id_macos.c  get_active_window_id_macos.m  get_active_window_id_windows.c  get_active_window_linux.c  get_active_window_macos.c  rustfmt.toml
custom-prompt/src/: main.rs
dotfiles/: .bash_aliases  .bash_aliases_wsl  .bash_aliases_wsl.bash  .bash_hacks.py  .bash_hacks.sh  .bashrc  .dircolors  .gitconfig  .gvimrc  .inputrc  .wezterm.lua  .xsessionrc  .zsh_aliases  .zshrc  README.md
dotfiles/.config/btop/: btop.conf
dotfiles/.config/fastfetch/: config.jsonc
dotfiles/.config/keepassxc/: keepassxc.ini
dotfiles/.config/kitty/: kitty.conf
dotfiles/.config/matplotlib/: matplotlibrc
dotfiles/.config/neofetch/: config.conf
dotfiles/.config/qt5ct/: qt5ct.conf
dotfiles/prompt/: .clang-format  .gitignore  Makefile  clang-format.bash  prompt.c  prompt.cc
(+27 files in other folders)
